# ing_connect_fairness

./: HOWTO.md  README.md  requirements.txt  setup.py
data/: credit_line_increase.csv
mlbias/: pyproject.toml
mlbias/mlbias/: model.py
notebooks/: workshop.ipynb
src/: model.py
