[tool.poetry]
name = "mlbias"
version = "0.1.0"
description = "Machine Learning Bias"
authors = ["Anilkumar Panda <anilkumar.panda@ing.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "1.5.3"
xgboost = "1.6"
numpy = "1.24"
shap = "0.41.0"
matplotlib = "^3.7.2"
loguru = "^0.7.1"
ruff = "^0.0.287"
black = "^23.7.0"
pre-commit = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
